kubernetes/main/apps/security/authentik/app/route.yaml
---
# yaml-language-server: $schema=https://kube-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: authentik
  namespace: security
spec:
  hostnames:
    - "sso.garb.dev"
  parentRefs:
    - name: envoy-external
      namespace: networking
      sectionName: https
  rules:
    - backendRefs:
        - name: authentik-server
          namespace: security
          port: 80
